fixed overflowing of cropper and back behaviour

--- a/app/styles/image-upload.css
+++ b/app/styles/image-upload.css
@@ -91,20 +91,20 @@
 }
 
 .image-cropper-container {
-  width: 90%;
-  max-width: 800px;
   margin: 0 auto;
+  width: 600px;
+  height: 400px;
 }
 
 .image-cropper {
-  display: block;
+  max-height: 100%;
   max-width: 100%;
 }
 
 .image-cropper-preview {
   overflow: hidden;
-  width: 500px;
-  height: 500px;
+  width: 400px;
+  height: 400px;
   border: 5px solid var(--image-cropper-preview--border);
   margin: 20px auto;
 }
